[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http.workspace = true
actix-web.workspace = true
argon2 = { version = "0.5", features = ["std"] }
anyhow.workspace = true
gotrue-entity.workspace = true
rand = { version = "0.8", features = ["std_rng"] }
secrecy.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror = "1.0.58"
tracing.workspace = true
