[package]
name = "client-api-test-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
mime = "0.3.17"
serde_json = "1.0.111"
tokio = { version = "1.0", features = ["sync"] }
tokio-stream = "0.1.14"
tracing.workspace = true
collab-folder.workspace = true
collab = { workspace = true, features = ["async-plugin"] }
client-api = { path = "../client-api", features = ["collab-sync", "test_util"] }
once_cell = "1.19.0"
tempfile = "3.9.0"
assert-json-diff = "2.0.2"
scraper = "0.17.1"
opener = "0.6.1"
image = "0.23.14"
database-entity.workspace = true
collab-entity.workspace = true
shared-entity.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "ansi", "json"] }
uuid = "1.6.1"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
reqwest = "0.11.23"
gotrue.workspace = true
websocket.workspace = true
futures = "0.3.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
