[package]
name = "client-api-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
mime = "0.3.17"
serde_json = "1.0.111"
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1.14"
tracing.workspace = true
collab-folder.workspace = true
collab = { workspace = true }
collab-document.workspace = true
collab-user.workspace = true
client-api = { path = "../client-api", features = ["test_util"] }
tempfile = "3.9.0"
assert-json-diff = "2.0.2"
database-entity.workspace = true
collab-entity.workspace = true
shared-entity.workspace = true
collab-database.workspace = true
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
  "ansi",
  "json",
] }
uuid.workspace = true
lazy_static = "1.4.0"
dotenvy = "0.15.7"
reqwest.workspace = true
gotrue.workspace = true
client-websocket.workspace = true
anyhow.workspace = true
serde = { version = "1.0.199", features = ["derive"] }
hex = "0.4.3"
async-trait.workspace = true
dashmap.workspace = true
rand = "0.9.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }


[features]
default = []
ai-test-enabled = []
v2 = []