[package]
name = "client-api-wasm"
version = "0.1.0"
authors = ["Admin"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.90"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7" }
serde.workspace = true
serde_json.workspace = true
client-api = { path = "../client-api" }
lazy_static = "1.4.0"
wasm-bindgen-futures = "0.4.40"
tsify = "0.4.5"
tracing.workspace = true
bytes.workspace = true
tracing-core = { version = "0.1.32" }
tracing-wasm = "0.2.1"
uuid.workspace = true
database-entity.workspace = true
collab-rt-entity.workspace = true
collab-entity.workspace = true
serde_repr = "0.1.19"
wee_alloc = { version = "0.4.5" }
serde-wasm-bindgen = "0.6.5"
[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[features]
default = []
