[package]
name = "client-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
native-tls = ["tokio-tungstenite/native-tls"]
native-tls-vendored = ["native-tls", "tokio-tungstenite/native-tls-vendored"]
rustls-tls-native-roots = [
    "__rustls-tls",
    "tokio-tungstenite/rustls-tls-native-roots",
]
rustls-tls-webpki-roots = [
    "__rustls-tls",
    "tokio-tungstenite/rustls-tls-webpki-roots",
]
__rustls-tls = []

[dependencies]
thiserror = "1"
http = "0.2"
httparse = "1.8"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite = "0.20"
tokio = { workspace = true, features = ["net"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
futures-channel = { version = "0.3" }
percent-encoding = "2.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "Event",
    "ErrorEvent",
    "BinaryType",
    "Blob",
]
