[package]
name = "collab-rt-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
collab = { workspace = true }
collab-entity = { workspace = true }
serde.workspace = true
serde_json.workspace = true
bytes = { version = "1.5", features = ["serde"] }
anyhow = "1.0.79"
actix = { version = "0.13", optional = true }
bincode.workspace = true
tokio-tungstenite = { version = "0.20.1", optional = true }
prost = "0.12.3"
database-entity.workspace = true
yrs.workspace = true
thiserror = "1.0.56"
collab-rt-protocol.workspace = true
client-websocket.workspace = true
serde_repr = "0.1"
brotli = { version = "3.4.0", optional = true }
chrono = "0.4"

[build-dependencies]
protoc-bin-vendored = { version = "3.0" }
prost-build = "0.12.3"

[features]
actix_message = ["actix"]
tungstenite = ["tokio-tungstenite"]
rt_compress = ["brotli"]