[package]
name = "collab-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { workspace = true, features = ["aio", "tokio-comp", "connection-manager", "streams"] }
tokio = { version = "1.26", features = ["rt-multi-thread", "macros" ] }
tokio-stream = { version = "0.1.14" }
thiserror = "1.0.58"
anyhow = "1.0.81"
