[package]
name = "database-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
collab-entity = { workspace = true }
validator = { version = "0.16", features = ["validator_derive", "derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true, features = ["serde", "v4"] }
thiserror = "1.0.56"
anyhow.workspace = true
tracing = "0.1"
serde_repr = "0.1.18"
app-error = { workspace = true }
bincode = "1.3.3"
appflowy-ai-client = { workspace = true, features = ["dto"] }
bytes.workspace = true
prost.workspace = true
infra.workspace = true
