[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collab = { workspace = true }
collab-entity = { workspace = true }
collab-rt-entity = { workspace = true }
validator = { version = "0.16", features = ["validator_derive", "derive"] }
database-entity.workspace = true
app-error = { workspace = true, features = ["sqlx_error", "validation_error"] }

tokio = { workspace = true, features = ["sync"] }
async-trait = "0.1.77"
anyhow = "1.0.79"
serde.workspace = true
serde_json.workspace = true
tonic-proto.workspace = true

sqlx = { workspace = true, default-features = false, features = [
  "postgres",
  "chrono",
  "uuid",
  "macros",
  "runtime-tokio-rustls",
  "rust_decimal",
] }
pgvector = { workspace = true, features = ["sqlx"] }
tracing = { version = "0.1.40" }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
redis.workspace = true
futures-util = "0.3.30"
bytes = "1.5"
aws-sdk-s3 = { version = "1.36.0", features = [
  "behavior-version-latest",
  "rt-tokio",
], optional = true }
sha2 = "0.10.8"
base64 = "0.21.7"
rust_decimal = "1.33.1"
bincode.workspace = true

[features]
default = ["s3"]
s3 = ["aws-sdk-s3"]
