[package]
name = "gotrue-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
lazy_static = "1.4.0"
jsonwebtoken = "9.3.1"
app-error = { workspace = true, features = ["gotrue_error"] }
